# gg-core

./: .git-commit-template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
core/: .dockerignore  Dockerfile  requirements.txt
core/api/: viewsets.py
core/core/: settings.py  urls.py
core/student/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  viewsets.py
core/student/migrations/: 0001_initial.py  0002_alter_student_department_alter_student_first_name_and_more.py  0003_student_public_id_alter_student_id.py  0004_alter_student_spiritual_title.py  0005_alter_student_spiritual_title.py  0006_user.py  0007_alter_user_email.py  0008_delete_user.py  0009_alter_student_email_user.py  0010_alter_student_email.py  0011_alter_student_email_alter_user_email.py  0012_alter_user_email.py  0013_alter_student_department.py  0014_alter_student_sex.py
