[tool.poetry]
name = "gg-core"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2.7"
Pillow = "^10.1.0"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.7"
django-filter = "^23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
